<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
	<CheckBoxPreference
        android:defaultValue="false"
        android:key="menuSkinsGamepadHideControlsC"
        android:title="@string/gamepad_hide_C" />
			
	<CheckBoxPreference
		android:defaultValue="false"
		android:key="menuSkinsGamepadHideControlsAB"
		android:title="@string/gamepad_hide_AB" />

	<CheckBoxPreference
		android:defaultValue="false"
		android:key="menuSkinsGamepadHideControlsR"
		android:title="@string/gamepad_hide_R" />

	<CheckBoxPreference
		android:defaultValue="false"
		android:key="menuSkinsGamepadHideControlsZ"
		android:title="@string/gamepad_hide_Z" />

	<CheckBoxPreference
		android:defaultValue="false"
		android:key="menuSkinsGamepadHideControlsStart"
		android:title="@string/gamepad_hide_Start" />

</PreferenceScreen>